<resources>
    <string name="app_name">DoodleApp</string>
    <string name="color">Color</string>
    <string name="save">SAVE</string>
    <string name="linewidth">LineWidth</string>
    <string name="erase">Erase</string>
    <string name="clear">Clear</string>
    <string name="container_of_customview">Container of CustomView</string>
    <string name="imagecontainer">imageContainer</string>
</resources>